fixed errors and merged new version of scmp

--- a/management/project/spmp.lyx
+++ b/management/project/spmp.lyx
@@ -89,6 +89,15 @@ Version 2.2
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset toc
+LatexCommand tableofcontents
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Part*
 Revision History
 \end_layout
@@ -6919,19 +6928,25 @@ A GANTT chart is used for this.
  from the GANTT-chart.
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Standard
 \begin_inset Newpage newpage
 \end_inset
 
+
+\end_layout
+
+\begin_layout Paragraph
 Iteration 1
 \begin_inset Newline newline
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
 \begin_inset Graphics
 	filename GANNT_Iter1.PNG
 	scale 40
-	scaleBeforeRotation
 	rotateAngle 90
 
 \end_inset
@@ -6942,18 +6957,6 @@ Iteration 1
 \begin_layout Paragraph
 Iteration 2
 \begin_inset Newline newline
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Graphics
-	filename GANTT_iter2.png
-	scale 40
-	scaleBeforeRotation
-	rotateAngle 90
-
 \end_inset
 
 
@@ -8156,6 +8159,68 @@ The xiast repository is for code and related resources (graphics, sound,
 \end_layout
 
 \begin_layout Subsection*
+Project website and requirements dashboard
+\end_layout
+
+\begin_layout Standard
+One of the requirements of the project is a website that allows team members
+ to track the project's progress, and allows people to find out more about
+ the project.
+ Such a website can be developed and maintained by making use of GitHub
+ Pages.
+\begin_inset Newline newline
+\end_inset
+
+GitHub Pages is essentially an automated system that generates static websites
+ by making use of 
+\begin_inset CommandInset href
+LatexCommand href
+name "Jekyll"
+target "http://jekyllrb.com/"
+
+\end_inset
+
+.
+ Jekyll is a tool that can transform plain text files and/or markdown in
+ a Jekyll project to ordinary HTML files, thus providing a static website
+ which can be hosted on any webserver.
+ With GitHub Pages a site can be created for a project by placing a Jekyll
+ project in the 
+\family typewriter
+gh-pages
+\family default
+ branch of a repository (in this case the 
+\family typewriter
+xiast
+\family default
+ repository).
+ Every time changes are committed to this branch GitHub Pages will regenerate
+ the website and host it on its own servers.
+ For Xiast, the website can be reached at 
+\begin_inset CommandInset href
+LatexCommand href
+target "http://se1-1314.github.io/xiast"
+
+\end_inset
+
+.
+\begin_inset Newline newline
+\end_inset
+
+Usage of GitHub Pages makes maintaining the website significantly easier
+ and less worrisome.
+ Many clean and professional looking templates are freely available for
+ Jekyll, eliminating the need of designing a new website from scratch.
+\begin_inset Newline newline
+\end_inset
+
+The requirements dashboard, which can be viewed on the website, can simply
+ be updated by editing the requirements.md file of the Jekyll project.
+ This can be done both in a local copy of the repository, or on the GitHub
+ website itself by a team member.
+\end_layout
+
+\begin_layout Subsection*
 Tracking issues
 \end_layout
 
@@ -8173,33 +8238,7 @@ ast/issues, we can create so-called issues.
 \begin_inset Newline newline
 \end_inset
 
-When all requirements of the project are known, we will start splitting
- up the requirements in one or more smaller "tasks" that need to be finished
- in order to implement the requirement.
- These issues can then be bundled into a milestone which denotes the requirement
- or part of the requirement that needs to be implemented.
- Milestones feature progress trackers which again makes it really easy for
- people to see how much still needs to be done for a requirement.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-For example: "Functioning user system" can be a milestone, with issues such
- as "User registration" and "User login", or "Access control" with "Assigning
- user rights" and "Rights checking" as some of the issues.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-As mentioned earlier, the issue tracker can and must be used for more than
- just tracking progress of the requirements.
- Issues will be made to report bugs and propose fixes, to propose enhancements
+Issues will be made to report bugs and propose fixes, to propose enhancements
  or request extra functionality, to report on critical errors and so on.
  Every issue features a comment section which makes it easy for team members
  to discuss requests, bugs, and so on.
@@ -8210,7 +8249,8 @@ As mentioned earlier, the issue tracker can and must be used for more than
 \begin_inset Newline newline
 \end_inset
 
-It is important that the issue tracker is kept clean at all times.
+To achieve a better workflow, the issue tracker must be kept as clean as
+ possible at all times.
  What this means is that all issues and milestones have proper descriptions
  and descriptive titles, issues that are finished must be closed (see workflow),
  when one team member takes over an issue from another team member this
@@ -8220,12 +8260,6 @@ It is important that the issue tracker is kept clean at all times.
 \end_inset
 
 
-\begin_inset Newline newline
-\end_inset
-
-The usage of the issue tracker, when done properly, causes less overhead
- on the project because we do not need to maintain our own tracker or website.
- 
 \end_layout
 
 \begin_layout Subsection*
@@ -8249,6 +8283,11 @@ Branches
 There will always be one central branch: the master branch.
  This branch is the actual "master copy" of our project and should contain
  preferably only working code.
+ No commits will be pushed directly to the 
+\family typewriter
+master
+\family default
+ branch.
 \begin_inset Newline newline
 \end_inset
 
@@ -8256,32 +8295,15 @@ There will always be one central branch: the master branch.
 \begin_inset Newline newline
 \end_inset
 
-Whenever a team member wants to implement changes, he must first branch
- the master branch into a new one and commit all his changes to the newly
- created branch.
- This branch, which is created locally, needs to be published to GitHub.
- This doesn't only make it easier to track changes on the branch, but also
- makes it easier to transfer the work to someone else.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-Because some issues have a really small workload and can be solved in a
- single commit, it's possible to solve multiple issues on one single branch
- instead of creating a branch for every issue.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-To keep things uniform, branch names must be in lower case only and use
- dashes instead of spaces.
- 
+Whenever a team member wants to implement changes, he must first create
+ a new branch from the current HEAD of the 
+\family typewriter
+master
+\family default
+ branch.
+ The member can then push new commits to the newly created local branch.
+ Branch names must be kept descriptive, but not too long, and when possible
+ only one problem, bug, requirement, or other must be dealt with in a branch.
 \end_layout
 
 \begin_layout Subsubsection*
@@ -8289,9 +8311,19 @@ Merging
 \end_layout
 
 \begin_layout Standard
-After the work has been done and the issue is implemented, the working branch
- needs to be merged into the master branch.
- It is mainly the team member's responsibility to avoid merge conflicts!
+When a feature is completed, a bug is fixed or something else, and after
+ testing, a branch is ready to be merged into the 
+\family typewriter
+master
+\family default
+ branch.
+ The standard procedure for this is to first fetch or pull changes from
+ the remote (GitHub) repository, merge the 
+\family typewriter
+master
+\family default
+ branch into the local branch, publish the branch to GitHub and create a
+ pull request (see below).
 \begin_inset Newline newline
 \end_inset
 
@@ -8299,25 +8331,17 @@ After the work has been done and the issue is implemented, the working branch
 \begin_inset Newline newline
 \end_inset
 
-Conflicts can be avoided more easily by periodically pulling and merging
- the master branch into the working branch, and not vice versa.
- By doing this regulary, conflicts that will occur will be smaller than
- they would be if we didn't merge at all.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-If and only if all work is done and the working branch is conflict free
- and the head of the branch is pushed to GitHub, steps can be taken to merge
- the working branch into the master branch.
- This is done by making a 
-\series bold
-pull request
-\series default
-.
+Merging other branches into one's own branch can be done without making
+ a pull request first, but merging into the 
+\family typewriter
+master
+\family default
+ branch without a pull request is not done.
+ To avoid merge conflicts or broken code however, it is advised to regularly
+ fetch and merge the master into one's own branch.
+ It is also possible to publish a branch to GitHub, allowing other people
+ to access your branch or merge changes from your branch into their own
+ branch.
 \end_layout
 
 \begin_layout Subsubsection*
@@ -8325,11 +8349,19 @@ Pull request
 \end_layout
 
 \begin_layout Standard
-When making a pull request, select the master branch as the base branch
- and the working branch as the compare branch.
+After code is tested and deemed working, a developer can create a
+\series bold
+ pull request
+\series default
+ for his working branch.
+ When making a pull request, select the
+\family typewriter
+ master
+\family default
+ branch as the base branch and the working branch as the compare branch.
  If the branch that is being merged closes one or more issues, they should
  be referenced in the description.
- If done correctly, like described in this guide (
+ If done correctly, as described in he following guide (
 \begin_inset CommandInset href
 LatexCommand href
 target "https://help.github.com/articles/closing-issues-via-commit-messages"
@@ -8377,16 +8409,6 @@ If conflicts arise during merging because of for instance earlier accepted
  In this case, the team member must fix his code and make a new pull request.
  The same is valid for when there are problems with the code itself.
  
-\end_layout
-
-\begin_layout Subsubsection*
-Assigning and reassigning issues
-\end_layout
-
-\begin_layout Standard
-To keep track of who is working on what and to avoid double work, members
- should assign themselves or others to issues.
- This can be done on the issue tracker itself.
 \begin_inset Newline newline
 \end_inset
 
@@ -8394,9 +8416,7 @@ To keep track of who is working on what and to avoid double work, members
 \begin_inset Newline newline
 \end_inset
 
-If a team member is stuck, the member is free to transfer the work to someone
- else.
- But he must not forget to reassign the issue to the other person
+
 \end_layout
 
 \begin_layout Subsubsection*
@@ -8412,65 +8432,6 @@ centralized workflow
 .
  This means we won't use branching and we will just commit to the master
  branch.
-\end_layout
-
-\begin_layout Subsection*
-Project website
-\end_layout
-
-\begin_layout Standard
-One of the requirements of the project is a website that can be used to
- track the progress of the project.
- Instead of focussing on implementing our own system, we will make full
- use of the tools GitHub is providing us.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-The website can be reached at 
-\begin_inset CommandInset href
-LatexCommand href
-target "http://se1-1314.github.io/xiast"
-
-\end_inset
-
-.
- This page, which is generated using GitHub Pages, contains information
- about the project, including download links for the source code and links
- to various documents.
-\begin_inset Newline newline
-\end_inset
-
-GitHub Pages is in essence a static website generator.
- This means that, given the contents of the site, it only needs to generate
- all the HTML and related files once.
- This not only makes it faster, but also a lot easier.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-The automatic page generator can be found on the settings page of the project.
- The files it generates are located in the gh-pages branch of the xiast
- repository.
- Commiting to this branch thus allows us to edit the page manually, although
- it is highly advised to keep using the automatic page generator and edit
- the content of the site using markdown.
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-To keep track of the project's status however, we will use the built-in
- issue tracker of GitHub.
- 
 \end_layout
 
 \begin_layout Section*
